Bug fixes and restyle